# student-perfomance-predictor

./: .gitignore  Docker-compose.yml  README.md  main.ipynb  main.py  pyproject.toml  reqirment.txt
backend/app/api/: apigetway.py
backend/app/router/: api.py  serviceendpoint.py
backend/app/services/: modelservice.py
backend/data_preprocessing_service/api/: process_api_endpoint.py
backend/data_preprocessing_service/service/: datatprocess.py
backend/data_training_service/api/: training_api_endpoint.py
backend/data_training_service/service/: datatraining.py
backend/getway/: api_endpoint.py
backend/getway/api/: api.py
backend/model_service/api/: model_service.py
backend/model_service/router/: modl_service_router.py
backend/model_service/service/: model_service.py
backend/tests/: reqirment.txt
frontend/: app.py
frontend/streamlit/: app.py
test/: main.ipynb
