[project]
name = "student-performance-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==4.2.2",
    "confluent-kafka>=2.13.0",
    "dotenv>=0.9.9",
    "fastapi>=0.133.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "kafka-python>=2.3.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.19.0",
    "uvicorn>=0.41.0",
    "xgboost>=3.2.0",
]
